--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 
-  <a class="skip-links" href="#main">Jump to main content</a>
-  <a class="skip-links" href="#nav">Jump to the navigation</a>
-
+<ul class="skip-links">
+  <li><a href="#main">Jump to main content</a></li>
+  <li><a href="#nav">Jump to the navigation</a></li>
+</ul>
 
   <header class="masthead section-dark section-bg embed embed-16by9" id="galaxies" role="banner">
     <div class="absolute w-1 pin-tl text-center pad-t pad-b gutter-1-2">
@@ -22,7 +23,7 @@
         <div class="unit [ xs-1 l-1-2 ]">
           <h1 class="masthead-title push-1-2" data-shadow="The Search for Hidden&nbsp;Galaxies">The Search for Hidden&nbsp;Galaxies</h1>
         </div>
-        <nav class="nav unit [ xs-1 l-1-2 ]" role="nav" id="nav" tabindex="0">
+        <nav class="nav unit [ xs-1 l-1-2 ]" role="navigation" id="nav" tabindex="0">
           <ul class="list-group-inline push-1-2">
             <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#galaxies">Galaxies</a></li>
             <li><a class="ib gutter-1-2 pad-t-1-2 pad-b-1-2" href="#techniques">Techniques</a></li>
